# l-system

./: .gitignore  Dockerfile  README.md  enter.sh  pyproject.toml
src/lsystems/: __main__.py  alphabet.py  generate.py  lsystem.py  sentence.py
src/lsystems/productions/: productions.py  static.py  stocastic.py
src/lsystems/protocols/: alphabet.py  production.py  sentence.py
